# onnx-rs

./: Cargo.toml  README.md  build.rs
benches/: comparison_benchmarks.rs  onnx_benchmarks.rs
examples/: advanced_concurrent_execution.rs  batch_matmul_broadcasting.rs  execute_model.rs  load_and_validate.rs  memory_management.rs  memory_planning.rs  operator_test.rs  tensor_layout.rs  thread_safe_execution.rs  workspace_management.rs
proto/: onnx.proto
src/: error.rs  lib.rs  model.rs  proto.rs
src/execution/: context.rs  engine.rs
src/layout/: mod.rs  tensor_layout.rs
src/memory/: allocator.rs  mod.rs  planner.rs  workspace.rs
src/ops/: activations.rs  mod.rs  registry.rs  tensor.rs
src/ops/math/: gemm.rs  matmul.rs  mod.rs
src/ops/nn/: conv.rs  mod.rs  pool.rs
src/optimization/: graph_optimizer.rs  mod.rs
src/optimization/passes/: constant_folding.rs  fusion.rs  mod.rs
src/parser/: graph_builder.rs  mod.rs  model_loader.rs  schema_validator.rs
src/tools/: comparison.rs  mod.rs  profile.rs
src/tools/profiler/: analysis.rs  core.rs  export.rs  mod.rs  recommendations.rs  types.rs  utils.rs
tests/: parser_tests.rs
